<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Temperature Data Trends</string>
    <string name="radio_well">Well</string>
    <string name="radio_sick">Sick</string>
    <string name="page00">Welcome to Temperature Data Trends.\n\nThis app makes it easy to share your temperature reading and overall wellness with public health officials.\n\nSwipe left to learn more about the app and get started.</string>
    <string name="page01">The temperature readings and wellness status that you enter in this app are transmitted to your public health agency.\n\nThere, public health officials will monitor your measurements and may contact you for more information.</string>
    <string name="page02">Use the provided thermometer and follow your assigned schedule.  This app will give you hourly reminders.\n\nRemember: Do not eat or drink immediately before taking your temperature.</string>
    <string name="page03">Please confirm your user ID. If your user ID is incorrect, please contact your public health agency.</string>
    <string name="patientid">User ID</string>
    <string name="ok">OK</string>
    <string name="next">Next</string>
    <string name="submitted">Submitted.\nThank you.</string>
    <string name="saved">Saved.</string>
    <string name="timesincelastmeasurement" formatted="false">%d hr and %d min since last measurement.</string>
    <string name="retake">Please take your temperature again.</string>
    <string name="patientidsaved">User ID saved.</string>
    <string name="pleasetaketemperature">Please take your temperature (°F)</string>
    <string name="pleaseentertemperature">Enter your temperature (°F)</string>
    <string name="notification">Please take your temperature</string>
    <string name="submit">Submit to\n</string>
    <string name="save">Save</string>
    <string name="viewhistory">View Temperature History</string>
    <string name="history">History</string>
    <string name="tos_title_local">Terms of Service</string>
    <string name="tos_title_publichealth">Information and Consent</string>
    <string name="tos_local"><![CDATA[<p>The Temperature Data Trends application ("App") is a service provided by Google Inc.  The App enables you to record your Temperature Trend Information and store it locally on your device.  Temperature Trend Information includes temperature measurements and wellness status ("feeling well" or "feeling sick"), and the date and time of submission.  By pressing "Accept," you acknowledge and agree to Google’s <a href="https://www.google.com/intl/en/policies/terms/">Terms of Service</a> and <a href="http://www.google.com/intl/en/policies/privacy/">Privacy Policy</a>.</p>]]></string>
    <string name="tos_publichealth"><![CDATA[<p>The Temperature Data Trends application ("App") is a service provided by Google Inc.   The App enables you to share your Temperature Trend Information with the Houston Department of Health and Human Services (HDHHS).  HDHHS will monitor your Temperature Trend Information as part of its public health program.  Temperature Trend Information includes temperature measurements and wellness status ("feeling well" or "feeling sick", symptoms, etc.), and the date and time of submission. </p><p>You may submit Temperature Trend Information to HDHHS by using the App.  HDHHS will associate your submissions with a User ID it assigns to you and which it will further associate with the personally identifiable information (i.e., contact information such as your name, address, email address, phone number) that HDHHS maintains or collects about you.  Google will not receive the personally identifiable information HDHHS maintains or collects about you from either HDHHS or by your use of the App.  Once the Temperature Trend Information is submitted by you, HDHHS’s subsequent use or disclosure of that information will be subject to HDHHS privacy policies, and HDHHS may contact you as part of its program.  </p><p>By pressing "Accept," you acknowledge and agree (i) to the sharing of your Temperature Trend Information with HDHHS; (ii) that HDHHS’s own policies apply to its use of Temperature Trend Information; and (iii) to Google’s <a href="https://www.google.com/intl/en/policies/terms/">Terms of Service</a> and <a href="http://www.google.com/intl/en/policies/privacy/">Privacy Policy</a> for your use of the App.</p>]]></string>
    <string name="warning_title">Important reminder</string>
    <string name="warning_message">Your last recorded temperature was over 12 hours ago.\n\nPlease take your temperature as soon as possible.\n\nThank you.</string>
</resources>