<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFFFF"
    android:orientation="vertical" >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:textColor="#FF000000"
        android:textSize="18sp"
        android:text="@string/page03" />
    <EditText
        android:id="@+id/patientId"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dip"
        android:textColor="#FF000000"
        android:textColorHint="#FF808080"
        android:hint="@string/patientid" 
        android:editable="false"/>
    
    <Button
        android:id="@+id/ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dip"
        android:text="@string/ok" />
</LinearLayout>