<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/timeSinceLastMeasurement"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text=""
            android:textColor="#FF000000"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dip"
            android:background="#FFFFFF" />

        <EditText
            android:id="@+id/temperature"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:hint="@string/pleaseentertemperature"
            android:inputType="numberDecimal"
            android:textColor="#FF000000"
            android:textColorHint="#FF808080" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dip"
            android:background="#FFFFFF" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dip"
                android:text="I am feeling..."
                android:textColor="#FF000000"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/radioGroupFeeling"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioWell"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dip"
                    android:checked="true"
                    android:text="@string/radio_well"
                    android:textColor="#FF000000"
                    android:textSize="20sp"
                android:onClick="hideKeyboard" />

                <RadioButton
                    android:id="@+id/radioSick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dip"
                    android:text="@string/radio_sick"
                    android:textColor="#FF000000"
                    android:textSize="20sp"
                android:onClick="hideKeyboard" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/symptoms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_marginLeft="25dip"
            android:visibility="gone">"

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="hideKeyboard"
                android:text="Extreme tiredness"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="hideKeyboard"
                android:text="Muscle pain"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="hideKeyboard"
                android:text="Headache"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="hideKeyboard"
                android:text="Sore throat"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="hideKeyboard"
                android:text="Vomiting"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="hideKeyboard"
                android:text="Diarrhea"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="hideKeyboard"
                android:text="Rash"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="hideKeyboard"
                android:text="Unexplained bleeding"
                android:textSize="18sp" />

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="hideKeyboard"
                android:text="Taking pain relievers"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="3dip"
            android:background="#FFFFFF" />

        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/submit"
            android:textColor="#FF000000" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <Button
            android:id="@+id/history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:text="@string/viewhistory"
            android:textColor="#FF000000" />
    </LinearLayout>

</ScrollView>